--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -18,4 +18,22 @@
         android:paddingLeft="@dimen/_5sdp"
         android:textSize="@dimen/_20sdp" />
 
+    <!--<Button-->
+        <!--android:id="@+id/history_undo_button"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:paddingLeft="@dimen/_5sdp"-->
+        <!--android:textSize="@dimen/_20sdp"-->
+        <!--android:text="Undo"/>-->
+
+    <Button
+        android:id="@+id/history_undo_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="UNDO"
+        android:textAllCaps="true"
+        android:textColor="@android:color/white"
+        android:layout_gravity="end|center_vertical"
+        style="@style/Base.Widget.AppCompat.Button.Borderless"/>
+
 </LinearLayout>
