--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -23,9 +23,9 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:text="UNDO"
-        android:textSize="@dimen/_20sdp"
+        android:textSize="@dimen/_16sdp"
         android:textAllCaps="true"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:layout_gravity="end|center_vertical"
         style="@style/Base.Widget.AppCompat.Button.Borderless"/>
 
